# PythonDrivetrain

./: .gitignore  README.md  commands.py  constants.py  drivetrain.py  elevator.py  pyproject.toml  robot.py  robotcontainer.py  simgui-ds.json  simgui-window.json  simgui.json  structs.py  subsystems.py  swervemodule.py
.wpilib/: wpilib_preferences.json
commands/: __init__.py  defaultdrivecommand.py  defaultelevcommand.py
deploy/pathplanner/autos/: blue-left-leave.auto
deploy/pathplanner/paths/: blue-left-leave.path
lib2813/: motorsubsystem.py  pidmotor.py  talonfxwrapper.py
subsystems/: __init__.py  drive.py  drivetrain.py  elevator.py  simdrivetrain.py
tests/: pyfrc_test.py
