[build-system]
requires = ["robotpy-build", "wpilib", "phoenix6"]

[tool.robotpy]
robotpy_version = "2024.3.2.2"

[tool.robotpy.wpilib.simulation]
# Enable HAL simulation
extensions = [
    "phoenix6.sim",
    "navx.sim"
]

[[tool.robotpy.pip_requirements]]
packages = [
    "phoenix6",
    "wpimath",
    "ntcore",
]